# cwe

./: .gitignore  README.md  TODO.md  pyproject.toml
cwe/: client.py  constants.py  parser.py  types.py  util.py
data/: example.json
