[tool.poetry]
name = "cwe"
version = "0.1.0"
description = "MITRE Common Weakness Enumeration (CWE)"
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
xmltodict = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
